infra/kubernetes/overlays/local/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  labels:
    app.kubernetes.io/name: webhook
    app.kubernetes.io/component: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webhook
        app.kubernetes.io/component: gateway
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: webhook
          image: data-zoo/webhook:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8004
              protocol: TCP
