infra/kubernetes/overlays/local/query-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-api
  labels:
    app.kubernetes.io/name: query-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: query-api
  ports:
    - name: http
      port: 8005
      targetPort: http
      protocol: TCP
